# charmed-openstack-upgrader

./: .gitignore  CONTRIBUTING.md  DEVELOPMENT.md  Makefile  README.md  SECURITY.md  pyproject.toml  rename.sh  setup.cfg  setup.py  sonar-project.properties  tox.ini
.github/: .jira_sync_config.yaml  CODEOWNERS
.github/workflows/: automatic-doc-checks.yml  check.yaml  mocked_plans.yaml  pr.yaml  promote.yaml  release.yaml  sonar.yaml  tics.yaml
completions/bash/: cou_bash_completion
cou/: __init__.py  __main__.py  cli.py  commands.py  exceptions.py  logging.py  ssdlc.py
cou/apps/: __init__.py  app.py  auxiliary.py  auxiliary_subordinate.py  base.py  ceph.py  channel_based.py  core.py  data_plane.py  factory.py  machine.py  nova_compute.py  ovn.py  subordinate.py
cou/steps/: __init__.py  analyze.py  backup.py  ceph.py  charm_operation.py  execute.py  hypervisor.py  nova.py  nova_cloud_controller.py  openstack_checks.py  plan.py  vault.py
cou/steps/application/: app.py  ceph.py  openstack_dashboard.py
cou/steps/upgrade/: basic.py  ceph.py
cou/utils/: __init__.py  app_utils.py  auxiliary_focal.csv  auxiliary_jammy.csv  cli.py  juju_utils.py  nova_compute.py  openstack.py  openstack_lookup.csv  openstack_to_track_mapping.csv  os_versions.py  text_styler.py  upgrade_utils.py
cou/zaza_utils/: __init__.py  controller.py  exceptions.py  generic.py  global_options.py  juju.py  model.py  openstack.py  os_versions.py  ro_types.py  upgrade_utils.py
developing/: how-to-query-nova-db-soft-deleted-instances.md  how-to-update-openstack-upgrade-path.md
docs/: .custom_wordlist.txt  .wordlist.txt  Makefile  conf.py  custom_conf.py  help-woke.rst  index.rst  readme.rst
docs/.sphinx/: get_vale_conf.py  update_sp.py
docs/.sphinx/_templates/: header.html
docs/explanation/: analysis.rst  index.rst  known-issues.rst  nova-data-migration.rst  planning.rst  upgrade-groups.rst  upgrade.rst
docs/get-started/: index.rst
docs/how-to/: archive-old-data.rst  backup.rst  configure-connection.rst  different-model.rst  find-mysql-backup-file.rst  index.rst  interruption.rst  landscape.rst  no-backup.rst  non-interactive.rst  plan-upgrade.rst  purge-data-on-shadow-table.rst  skip-upgrading-applications.rst  test-on-juju-openstack-provider.rst  upgrade-cloud.rst  verbosity.rst  watch-cou-logs.rst
docs/reference/: commands.rst  environment-variables.rst  index.rst  known-issues.rst  security.rst
snap/: snapcraft.yaml
tests/functional/: requirements.txt
tests/functional/full/tests/: backup.py  tests.yaml
tests/functional/smoke/: bundle.yaml.j2  conftest.py  test_model.py
tests/functional/tests/: backup.py  cou_smoke.py  model.py  smoke.py  tests.yaml
tests/functional/tests/bundles/: openstack.yaml  smoke.yaml
tests/mocked_plans/: conftest.py  test_base_plan.py  test_sample_plans.py  utils.py
tests/mocked_plans/sample_plans/: 018346c5-f95c-46df-a34e-9a78bdec0018.yaml  9eb9af6a-b919-4cf9-8f2f-9df16a1556be.yaml  base.yaml  ceph-osd-with-nova-compute-focal.yaml  ceph-osd-with-nova-compute-jammy.yaml  example-cloud-1.yaml  example-cloud-2.yaml
tests/unit/: __init__.py  conftest.py  jujustatus.json  requirements.txt  test_cli.py  test_commands.py  test_exceptions.py  test_logging.py  test_main.py  test_ssdlc.py  utils.py
tests/unit/apps/: test_app.py  test_auxiliary.py  test_auxiliary_subordinate.py  test_base.py  test_ceph.py  test_channel_based.py  test_core.py  test_factory.py  test_machines.py  test_ovn.py  test_subordinate.py  test_subordinate_auxiliary.py  utils.py
tests/unit/apps_planning/: test_apps_plan.py  test_auxiliary_subordinate_plans.py
tests/unit/sample_plans/: base.yaml
tests/unit/steps/: conftest.py  jujustatus.json  test_analyze.py  test_backup.py  test_ceph.py  test_charm_operation.py  test_execute.py  test_hypervisor.py  test_nova.py  test_nova_cloud_controller.py  test_plan.py  test_steps.py  test_steps_analyze.py  test_steps_backup.py  test_steps_execute.py  test_steps_plan.py  test_vault.py
tests/unit/utils/: test_app_utils.py  test_cli.py  test_juju_utils.py  test_nova_compute.py  test_openstack.py  test_os_versions.py  test_text_styler.py  test_utils.py
tests/unit/zaza_utils/: test_utils_controller.py  test_utils_generic.py  test_utils_juju.py  test_utils_model.py  test_utils_openstack.py  test_utils_os_versions.py  test_utils_upgrade_utils.py
