[metadata]
name = canonical-openstack-upgrader
# See setup.py version generator
url = https://github.com/esunar/canonical-openstack-upgrader
description = Application for upgrading Canonical Openstack
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8; variant=GFM
author = Canonical DevOps Centres
license = Apache-2.0
license_files = LICENSE
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Plugins
    Intended Audience :: Developers
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License 2.0 (Apache-2.0)
    Operating System :: OS Independent
    Topic :: System :: Installation/Setup
    Topic :: Utilities
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.10

[options]
include_package_data = True
python_requires = >=3.10
packages = find:
install_requires =
    oslo.config
    juju<3.0
    colorama
    ruamel.yaml
    packaging
    aioconsole
    halo

[options.extras_require]
lint =
    flake8
    flake8-docstrings
    flake8-colors
    pyproject-flake8
    pylint
    mypy
    black
    isort
    pylint
    mypy
    types-PyYAML

unittests =
    pytest
    pytest-cov
    pytest-mock
    mock>=1.2
    pytest-asyncio
    aiounittest
    gevent

functests =
    zaza @ git+https://github.com/openstack-charmers/zaza.git#egg=zaza
    zaza-openstack @ git+https://github.com/openstack-charmers/zaza-openstack-tests.git#egg=zaza.openstack


[options.packages.find]
exclude =
    tests

[options.package_data]
* =
    *.csv

[options.entry_points]
console_scripts =
    cou = cou:main

[aliases]
test = pytest
